Update the readme and notebook header
Refer to 2023 summer school, bump pyam python version, bump copyright year

--- a/tutorial-notebook.ipynb
+++ b/tutorial-notebook.ipynb
@@ -10,18 +10,19 @@
     "\n",
     "<br>\n",
     "<img style=\"float: left; height: 20px; padding-left: 10px;\" src=\"https://img.shields.io/github/license/danielhuppmann/ENGAGE-pyam-tutorial\">\n",
-    "<img style=\"float: left; height: 20px; padding-left: 10px;\" src=\"https://img.shields.io/badge/python-3.7_|_3.8_|_3.9-blue?logo=python&logoColor=white\">\n",
+    "<img style=\"float: left; height: 20px; padding-left: 10px;\" src=\"https://img.shields.io/badge/python-≥3.8,<3.12-blue?logo=python&logoColor=white\">\n",
     "<img style=\"float: left; height: 20px; padding-left: 10px;\" src=\"https://img.shields.io/badge/code%20style-black-000000.svg\">\n",
     "<br><br>\n",
     "\n",
-    "Copyright (c) 2022 Daniel Huppmann; this repository is released under the [MIT License](https://github.com/danielhuppmann/ENGAGE-pyam-tutorial/blob/main/LICENSE).\n",
+    "Copyright 2022-2023 Daniel Huppmann; this repository is released under the [MIT License](https://github.com/danielhuppmann/ENGAGE-pyam-tutorial/blob/main/LICENSE).\n",
     "\n",
     "## Overview\n",
     "\n",
-    "This notebook presents a number of features of the **pyam** package given as part of\n",
-    "the *Capacity building workshop on good practices in modeling* on February 1, 2022.\n",
+    "This notebook illustrates a number of features of the **pyam** package\n",
+    "presented as part of the *hands-on tutorial sessions*\n",
+    "of the **NAVIGATE-ENGAGE Summer School 2023 on Integrated-Assessment Modeling**.\n",
     "This workshop was organized as part of the Horizon 2020 project ENGAGE\n",
-    "([link](https://www.engage-climate.org/capacity-building-workshop-1-february-2022/)).\n",
+    "([link](https://www.engage-climate.org/navigate-engage-summer-school-2023/)).\n",
     "\n",
     "The slides for the related presentation are available\n",
     "at [pure.iiasa.ac.at/id/eprint/17783/](https://pure.iiasa.ac.at/id/eprint/17783/).\n",
@@ -36,7 +37,14 @@
     "the [NGFS Scenario Explorer hosted by IIASA](https://data.ece.iiasa.ac.at/ngfs),\n",
     "Phase 2 (June 2021).\n",
     "\n",
-    "### Requirements\n",
+    "\n",
+    "### Read the docs\n",
+    "\n",
+    "See the comprehensive documentation of the **pyam** package on\n",
+    "[ReadTheDocs](https://pyam-iamc.readthedocs.io/en/stable/tutorials.html)!\n",
+    "\n",
+    "\n",
+    "### Installation\n",
     "\n",
     "You can install the **pyam** package using the following command -\n",
     "note the subtle naming difference on [pypi.org](https://pypi.org/project/pyam-iamc/).\n",
