Update the data source for NGFS phase 3

--- a/tutorial-notebook.ipynb
+++ b/tutorial-notebook.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,7 +26,7 @@
     "([link](https://www.engage-climate.org/navigate-engage-summer-school-2023/)).\n",
     "\n",
     "The slides for the related presentation are available\n",
-    "at [pure.iiasa.ac.at/id/eprint/17783/](https://pure.iiasa.ac.at/id/eprint/17783/).\n",
+    "at https://doi.org/10.5281/zenodo.8112529 (ZENODO).\n",
     "\n",
     "This tutorial is based on the advanced assignment\n",
     "of the [Modelling Lab](https://github.com/danielhuppmann/climate-risks-academy-2021),\n",
@@ -33,10 +34,18 @@
     "the European University Institute (EUI) Florence School of Banking and Finance\n",
     "in cooperation with Oliver Wyman.\n",
     "\n",
-    "The scenario data used in this tutorial notebook is taken from\n",
-    "the [NGFS Scenario Explorer hosted by IIASA](https://data.ece.iiasa.ac.at/ngfs),\n",
-    "Phase 2 (June 2021).\n",
+    "### Tutorial data source\n",
     "\n",
+    "The scenario data used in this tutorial notebook is taken from\n",
+    "the **NGFS Scenario Ensemble**, Phase 3,  \n",
+    "see Richters et al, 2022 ([link](https://www.ngfs.net/sites/default/files/medias/documents/ngfs_climate_scenarios_for_central_banks_and_supervisors_.pdf.pdf)).\n",
+    "\n",
+    "The data was downloaded from the following scenario database:\n",
+    "> **Emissions scenario database of the European Scientific Advisory Board on Climate Change, hosted by IIASA**  \n",
+    "> Release 2.0  \n",
+    "> European Scientific Advisory Board on Climate Change, 2023  \n",
+    "> doi: \thttps://doi.org/10.5281/zenodo.7660150  \n",
+    "> url: \thttps://data.ece.iiasa.ac.at/eu-climate-advisory-board  \n",
     "\n",
     "### Read the docs\n",
     "\n",
