--- a/tutorial-notebook.ipynb
+++ b/tutorial-notebook.ipynb
@@ -642,7 +642,7 @@
     "df.rename(\n",
     "    variable={variable: \"Temperature\"},\n",
     "    unit={\"K\": \"°C\"},\n",
-    "    inplace=True\n",
+    "    inplace=True,\n",
     ")"
    ]
   },
@@ -1120,7 +1120,14 @@
     }
    ],
    "source": [
-    "df.filter(variable=\"Temperature\").plot(legend=dict(loc=\"outside right\"), color=\"scenario\", linestyle=\"model\")"
+    "(\n",
+    "    df.filter(variable=\"Temperature\")\n",
+    "    .plot(\n",
+    "        legend={\"loc\": \"outside right\"},\n",
+    "        color=\"scenario\",\n",
+    "        linestyle=\"model\",\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -3062,8 +3069,7 @@
     "\n",
     "## Computing the amount of primary energy that is not coal\n",
     "\n",
-    "First, we subtract coal from total primary energy and draw a simple plot.  \n",
-    "For this section, we will use a downselected version of the scenario data that only has global values."
+    "First, we subtract coal from total primary energy and draw a simple plot.  "
    ]
   },
   {
@@ -3139,8 +3145,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that **pyam** has automatically changed the unit on the y-axis.\n",
-    "Dividing `EJ/yr` by `EJ/yr` yiels in a dimensionless value."
+    "Note that **pyam** has automatically changed the unit on the y-axis,\n",
+    "because dividing *EJ/yr* by *EJ/yr* yiels a dimensionless value."
    ]
   },
   {
